# orderbook

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
orderbook/: Cargo.toml
orderbook/src/: configuration.rs  error.rs  lib.rs  prelude.rs  telemetry.rs
orderbook/src/integration/: api.rs  api_service.rs  event.rs  mod.rs  runtime.rs  transport.rs
orderbook/src/integrator/: api.rs  binance.rs  event_data.rs  mod.rs  transport.rs
orderbook/src/order_book/: book.rs  exchange.rs  mod.rs  ser.rs
orderbook/src/order_book/snapshots/: orderbook__order_book__ser__tests__serde_can_serialize_orderbook.snap  trading__order_book__ser__tests__serde_can_serialize_orderbook.snap
orderbook/tests/service/: runtime.rs
proto/: orderbook.proto
settings/: base.toml  base.yaml  local.toml
src/: configuration.rs  lib.rs  main.rs  prelude.rs  result.rs  telemetry.rs
src/integration/: api_service.rs  event.rs  mod.rs  runtime.rs  summary.rs
src/order_book/: book.rs  exchange.rs  mod.rs  ser.rs
src/order_book/snapshots/: orderbook__order_book__ser__tests__serde_can_serialize_orderbook.snap
tests/service/: main.rs  runtime.rs
