[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = "1.23.1"
rust_decimal_macros = "1.23.1"
priority-queue = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.53"
thiserror = "1.0.30"
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
tungstenite = "0.17.2"
futures-util = "0.3.21"
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "registry"] }
tracing-bunyan-formatter = "0.3.2"
secrecy = { version = "0.8.0", features = ["serde"] }
config = { version = "0.13.1", features = ["toml", "yaml"] }
tonic = "0.7.1"
prost = "0.10.1"
tokio-stream = "0.1.8"

[dependencies.tokio]
version = "1.17.0"
default-features = false
features = ["rt", "macros", "sync", "net"]

[dev-dependencies]
insta = "1.13.0"
fake = "2.4.3"
once_cell = "1.10.0"
tokio = { version = "1.17.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.7"
