[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = "1.23.1"
priority-queue = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.53"
thiserror = "1.0.30"
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
tungstenite = "0.17.2"
futures-util = "0.3.21"
serde_json = "1.0"
anyhow = "1.0"

[dependencies.tokio]
version = "1.17.0"
default-features = false
features = ["rt", "macros", "sync", "net"]

[dev-dependencies]
insta = "1.13.0"
rust_decimal_macros = "1.23.1"